<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp" />

        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense" />
        </RadioGroup>

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:hint="@string/date" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_transaction"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btn2" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_transaction"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
